# rust-learning

./: README.md
app/: Cargo.toml  Dockerfile  user-rust.db
app/src/: lib.rs  main.rs  repository.rs  service.rs
app/src/models/: user.rs
app/src/repository/: db_sqlite.rs
app/src/service/: db_memory.rs  user_service.rs
app/src/utils/: utils.rs
app/tests/: repository_tests.rs
